# billiam-os

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  dead-end-ledger.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  secret-scan.yml
config/: aios.service
core/: __init__.py  adapters.py  ai_core.py  audio.py  billiam.py  cli.py  config.py  memory.py  pipeline.py  sandbox.py  setup_steps.py  stt.py  tts.py
core/cli/: __init__.py  daemon.py  handlers.py  main.py
core/tts/: __init__.py  config.py  module.py  protocol.py
docs/: architecture.md
scripts/: billiam-voice.sh  hotkey.sh  install-fedora.sh  install-ubuntu.sh  install.sh  setup_inference.sh
tests/: mock_llm_server.py  test_ai_core.py  test_ai_core_di.py  test_ai_core_extended.py  test_audio.py  test_billiam.py  test_cli.py  test_cli_handlers.py  test_config.py  test_config_extended.py  test_config_validate.py  test_coverage_push.py  test_integration.py  test_memory.py  test_sandbox.py  test_sandbox_extended.py  test_sandbox_layer2.py  test_setup_steps.py  test_stt.py  test_tts.py  test_tts_package.py
