[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "billiam-os"
version = "1.1.0"
description = "AI-Powered Linux OS Layer — Voice-controllable, agent-driven personal digital assistant"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Billiam OS Contributors"},
]
long_description = "README.md"
long_description_content_type = "text/markdown"

dependencies = [
    "openai>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.28,<3.0",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=7.0.0,<8.0.0",
    "faster-whisper>=1.0.0,<2.0.0",
]

[project.scripts]
billiam = "core.cli:main"

[project.urls]
Homepage = "https://github.com/iknowkungfubar/billiam-os"
Repository = "https://github.com/iknowkungfubar/billiam-os.git"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S"]
ignore = ["S603", "S607"]  # subprocess with shell=True is intentional for system commands

# Tests use assert (S101) — standard pytest pattern. billiam.py uses random.choice for
# catchphrases (S311) — not security-critical. sandbox exception naming (N818) is acceptable.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "S108", "N818", "N806"]
"core/billiam.py" = ["S311"]
"core/sandbox.py" = ["N818", "N806"]
"core/cli.py" = ["S101"]
"core/stt.py" = ["F401"]
"core/tts.py" = ["F401", "S310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
