[build-system]
requires = [
    "setuptools>=83.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "billiam-os"
version = "1.1.0"
description = "AI-Powered Linux OS Layer — Voice-controllable, agent-driven personal digital assistant"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Billiam OS Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.28,<3.0",
]

[project.license]
text = "GPL-3.0"

[project.optional-dependencies]
voice = [
    "edge-tts>=7.0.0,<8.0.0",
    "faster-whisper>=1.0.0,<2.0.0",
]

[project.scripts]
billiam = "core.cli:main"

[project.urls]
Homepage = "https://github.com/iknowkungfubar/billiam-os"
Repository = "https://github.com/iknowkungfubar/billiam-os.git"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN001",
    "TID252",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "ANN401",
    "ARG001",
    "ARG002",
    "BLE001",
    "C901",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D402",
    "D403",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D412",
    "D413",
    "D414",
    "D415",
    "D416",
    "D417",
    "EM101",
    "EM102",
    "ERA001",
    "F401",
    "FBT001",
    "FBT002",
    "FBT003",
    "FIX002",
    "G004",
    "INP001",
    "ISC001",
    "N802",
    "N803",
    "N806",
    "PERF203",
    "PERF401",
    "PGH003",
    "PGH004",
    "PIE790",
    "PLC0415",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1702",
    "PLR2004",
    "PLW1510",
    "PLW2901",
    "PT006",
    "PT017",
    "PT018",
    "PTH101",
    "PTH103",
    "PTH108",
    "PTH110",
    "PTH111",
    "PTH118",
    "PTH120",
    "PTH123",
    "PTH202",
    "RET503",
    "RET504",
    "RET505",
    "RUF001",
    "RUF012",
    "RUF019",
    "RUF059",
    "RUF100",
    "S101",
    "S307",
    "S310",
    "S311",
    "S602",
    "S603",
    "S604",
    "S605",
    "S606",
    "S607",
    "SIM102",
    "SIM105",
    "SIM115",
    "SLF001",
    "T201",
    "TCH001",
    "TCH002",
    "TCH003",
    "TD002",
    "TD003",
    "TRY003",
    "TRY300",
    "TRY301",
    "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "A002",
    "PERF102",
    "PTH100",
    "PTH101",
    "S101",
    "S108",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
addopts = "-v --tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = [
    "core",
]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise ImportError",
    "return NotImplemented",
    "@overload",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "tests/",
]
ignore_missing_imports = true
